<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_produkPencarianProduk"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/Gray"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_namaProdukPencarianProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_produkPencarianProduk"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12sp"
        android:text="@string/nama_produk"
        android:textColor="@color/WarnaTeks"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_hrgProdukPencarianProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_namaProdukPencarianProduk"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/harga_produk"
        android:textColor="@color/ColorPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_loveProdukPencarianProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_hrgProdukPencarianProduk"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_like"
        android:drawablePadding="4sp"
        android:text="0"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_hrgProdukPencarianProduk"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="12sp"
        android:layout_marginTop="8dp"
        android:text="@string/belum_ada_penilaian"
        android:textSize="12sp" />


</RelativeLayout>