<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_below="@id/belanjaantitle"
        android:id="@+id/checkout1"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox_penjualCheckout"
            android:layout_alignParentLeft="true"
            android:layout_width="32dp"
            android:layout_centerInParent="true"
            android:layout_height="32dp"
            android:buttonTint="@color/ColorPrimary"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginLeft="16dp"
            android:id="@+id/image_fotoPenjualCheckout"
            android:layout_width="40dp"
            android:layout_centerInParent="true"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/checkbox_penjualCheckout"
            android:src="@drawable/flat_1"
            android:layout_marginRight="8dp"/>
        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/txt_namaPenjualCheckout"
            android:layout_toRightOf="@id/image_fotoPenjualCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_penjual"/>
        <Button
            android:background="#fff"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ubah"
            android:textAllCaps="false" />
    </RelativeLayout>
    <View
        android:id="@+id/checkout2"
        android:layout_below="@id/checkout1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9f9f9f"></View>
    <RelativeLayout
        android:id="@+id/checkout3"
        android:layout_below="@+id/checkout2"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <CheckBox
            android:id="@+id/checkbox_ProdukCheckout"
            android:layout_alignParentLeft="true"
            android:layout_width="32dp"
            android:layout_centerInParent="true"
            android:layout_height="32dp"
            android:buttonTint="@color/ColorPrimary"/>
        <ImageView
            android:layout_toRightOf="@id/checkbox_ProdukCheckout"
            android:layout_width="100dp"
            android:id="@+id/image_produkCheckOut"
            android:layout_height="120dp"
            android:src="@drawable/produk_1"
            android:scaleType="fitXY"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_toRightOf="@id/image_produkCheckOut"
            android:layout_width="wrap_content"
            android:id="@+id/txt_produkCheckout"
            android:text="@string/nama_produk"
            android:textColor="@color/WarnaTeks"
            android:textSize="22sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="8dp"
            android:text="-"
            android:layout_toRightOf="@id/image_produkCheckOut"
            android:layout_below="@id/txt_produkCheckout"
            android:layout_width="20dp"
            android:background="@color/Gray"
            android:id="@+id/btn_minusCheckout"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_qtyCheckout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/btn_plsCheckout"
            android:layout_toEndOf="@+id/btn_minusCheckout"
            android:gravity="center"
            android:text="1"
            android:textAlignment="center"
            android:textSize="15sp" />
        <Button
            android:layout_marginTop="8dp"
            android:text="+"
            android:layout_toRightOf="@id/txt_qtyCheckout"
            android:layout_below="@id/txt_produkCheckout"
            android:layout_width="20dp"
            android:background="@color/Gray"
            android:id="@+id/btn_plsCheckout"
            android:layout_height="20dp" />
        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/txt_priceCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_minusCheckout"
            android:layout_toRightOf="@id/image_produkCheckOut"
            android:text="@string/harga_produk"
            android:textSize="14sp"
            android:textColor="@color/ColorPrimary"/>

    </RelativeLayout>
</RelativeLayout>